# Speex_project

./: CMakeLists.txt  Screencast from 06.02.23 14:58:21.webm  main.c
PLC/: lowcfe.c  lowcfe.h
sdcard/: speex.spx
speex_prj/lib/pkgconfig/: speex.pc
